--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.15",
+    "babel-preset-es2015": "^6.24.1",
+    "bootstrap": "^5.2.3",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "0.9.5"
