--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "myownweb",
+  "name": "woundmend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
     "@heroicons/react": "^2.0.15",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^5.2.3",
     "mdb-react-ui-kit": "^5.1.0",
@@ -13,12 +18,27 @@
     "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "prettier": "2.8.4"
   }
 }
